# anvil-pelican-ui

./: .gitignore  main.py  manifest.yml  passenger_wsgi.py  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-07-14T20-20-02-400Z.yml  page-2026-07-14T20-23-55-860Z.yml  page-2026-07-14T20-26-56-400Z.yml
.uv-bin/: env  env.fish
api/: auth.py
api/core/: config.py
api/css/: datasets.css
api/routes/: database.py  dataset.py  downloads.py  local.py  pelican.py
api/static/css/: about.css  admin.css  before-after.md  categories.css  datasets.css  docs.css  downloads.css  home.css  navbar.css  quick-access.css  toast.css
api/static/js/: admin.js  categories.js  datasets.js  docs.js  downloads.js  quick-access.js  toast.js
api/templates/: about.html  admin.html  categories.html  datasets.html  docs.html  downloads.html  index.html  quick-access.html
api/templates/partials/: navbar.html
data/: categories.json  datasets.json
scripts/: init_db.py  test.http
