[project]
name = "pelican-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloc>=0.2.5",
    "fastapi",
    "fsspec>=2026.6.0",
    "jinja2>=3.1.6",
    "pathlib>=1.0.1",
    "pelicanfs>=1.3.1",
    "uvicorn>=0.16.0",
]
